--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,7 +2,7 @@
 
 a {
   color: $white-75;
-  padding-right: 1.5rem;
+  padding: 0 1rem;
   text-decoration: none;
 
   &:hover {
@@ -11,20 +11,19 @@ a {
 }
 
 h1 {
-  box-shadow: $header-box-shadow;
-  color: $white-60;
+  
+  color: $white-85;
   font-family: $title-font;
   font-size: 7rem;
-  font-weight: 400;
+  font-weight: 200;
   margin: 0;
   padding: .5rem 1rem;
-  text-shadow: $button-text-shadow-white;
+
 }
 
 header {
-  background: $black-5; 
   display: block;
-  margin: 0 0 .5rem;
+  margin: 0 0 1rem;
 }
 
 nav {
@@ -32,7 +31,7 @@ nav {
   box-shadow: $header-box-shadow;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: .5rem 0 .75rem 1.5rem;
+  padding: .5rem 1rem .75rem 1rem;
 }
 
 p {
@@ -40,9 +39,10 @@ p {
   margin: 0;
 }
 
-// .title-block {
-//   padding: 1rem;
-// }
+.title-block {
+  box-shadow: $header-box-shadow;
+  padding: .5rem 1rem;
+}
 
 .auth-links {
   grid-area: 1 / 1 / 2 / 2;
@@ -56,7 +56,7 @@ p {
 .user-welcome {
   color: $bright-pop-75;
   background: $gradient-colors;
-  padding: .5rem 1.5rem;
+  padding: .5rem 2rem;
   min-height: 1.25rem;
   box-shadow: $header-box-shadow;
 }
